-[x] corrige el error que en el formulario de la interface web Query Console, no muestra ninguna base de datos en la lista para seleccionar